feat(auth): completed forgot and reset password work with alphanumeric otp
