# controllers/tutorial.js
@@ -1,10 +1,49 @@
 const bcrypt = require('bcryptjs');
 const jwt = require('jsonwebtoken');
+const nodemailer = require('nodemailer');
 const tutorial = require('../models/tutorial');
 const user = require('../models/user');
-const { joiSchema, joiuserSchema, joiloginSchema } = require('../validators/validate');
+const reset = require('../models/reset');
+const { joiSchema, joiuserSchema, joiloginSchema, forgotSchema, resetSchema } = require('../validators/validate');
 const logger = require('../loggers/logger');
+
+// function for sending mail using node mailer
+
+const sendEmail = async (email, otp) => {
+  try {
+    const transporter = nodemailer.createTransport({
+      service: 'gmail',
+      auth: {
+        user: process.env.AUTH_EMAIL,
+        pass: process.env.AUTH_PASS,
+      },
+    });
+    const info = await transporter.sendMail({
+      from: process.env.AUTH_EMAIL, // sender address
+      to: email, // list of receivers
+      subject: 'Forgot Password', // Subject line
+      text: `Your one time password`, // plain text body
+      html: `<p><b>your one time password is : ${otp} </b> Enter this otp in the swagger reset password section and also enter your new password and click submit then your password will be successfully reseted<p>This otp will get expire in 20 mins</p></p>`, // html body
+    });
+    return info.messageId;
+  } catch (error) {
+    return error.message;
+  }
+};
+
+// generating alphanumeric otp
+
+const getOtp = function () {
+  const randomChars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+  let result = '';
+  for (let i = 0; i < 6; i++) {
+    result += randomChars.charAt(Math.floor(Math.random() * randomChars.length));
+  }
+  return result;
+};
+
 // Tutorial api's
+// Get all tutorials
 
 const getTutorial = async (req, res) => {
   try {
@@ -16,6 +55,8 @@ const getTutorial = async (req, res) => {
     res.status(302).json(error.message);
   }
 };
+
+// Sorted tutorial in descending order
 
 const getSortedTutorial = async (req, res) => {
   try {
@@ -30,6 +71,9 @@ const getSortedTutorial = async (req, res) => {
     logger.error(error);
   }
 };
+
+// Create a tutorial
+
 const postTutorial = async (req, res) => {
   try {
     const resultValidated = await joiSchema.validateAsync(req.body);
@@ -44,6 +88,9 @@ const postTutorial = async (req, res) => {
     logger.error(error);
   }
 };
+
+// Update a tutorial
+
 const putTutorial = async (req, res) => {
   try {
     const id = req.params.id.match(/^[0-9a-fA-F]{24}$/);
@@ -65,6 +112,8 @@ const putTutorial = async (req, res) => {
     logger.error(error);
   }
 };
+
+// Delete a tutorial
 const deleteTutorial = async (req, res) => {
   try {
     const id = req.params.id.match(/^[0-9a-fA-F]{24}$/);
@@ -84,6 +133,8 @@ const deleteTutorial = async (req, res) => {
     logger.error(error);
   }
 };
+
+// Find tutorial by title
 
 const findTutorial = async (req, res) => {
   try {
@@ -114,6 +165,42 @@ const findTutorial = async (req, res) => {
 };
 
 // Users api's
+// Get all users
+
+const getUsers = async (req, res) => {
+  try {
+    const userdb = await user.find();
+    if (userdb) {
+      res.json({ userdb });
+    }
+  } catch (error) {
+    res.status(302).json(error.message);
+  }
+};
+
+// Delete the user
+
+const deleteUsers = async (req, res) => {
+  try {
+    const id = req.params.id.match(/^[0-9a-fA-F]{24}$/);
+    if (id == null) {
+      throw new Error('check your id');
+    }
+    const userdb = await user.findByIdAndRemove(id);
+    if (!userdb) {
+      res.send('User Not Found');
+    } else {
+      res.json({
+        userdb,
+      });
+    }
+  } catch (error) {
+    logger.error(error);
+  }
+};
+
+// Register the user
+
 const registerUsers = async (req, res) => {
   try {
     const resultValidated = await joiuserSchema.validateAsync(req.body);
@@ -142,6 +229,8 @@ const registerUsers = async (req, res) => {
   }
 };
 
+// Login the user
+
 const loginUsers = async (req, res) => {
   try {
     const resultValidated = await joiloginSchema.validateAsync(req.body);
@@ -163,37 +252,61 @@ const loginUsers = async (req, res) => {
     return res.json(error.message);
   }
 };
-const getUsers = async (req, res) => {
+
+// Forgot password
+
+const forgotPassword = async (req, res) => {
   try {
-    const userdb = await user.find();
-    if (userdb) {
-      res.json({ userdb });
+    const resultValidated = await forgotSchema.validateAsync(req.body);
+    // check if email does not exists
+    const userE = await user.findOne({ email: resultValidated.email });
+    if (!userE) {
+      return res.status(400).send('Email does not exists! Register or check email');
     }
+    // calling getOtp function to generate otp
+    const otp = getOtp();
+
+    // calling sendEmail function to send otp on mail
+    const info = await sendEmail(userE.email, otp);
+    if (info && otp) {
+      const resetdb = await reset({
+        email: userE.email,
+        otp,
+      });
+      resetdb.save();
+    }
+    return res.status(200).send('Check the gmail for otp');
   } catch (error) {
-    res.status(302).json(error.message);
+    return res.json(error.message);
   }
 };
 
-const deleteUsers = async (req, res) => {
+// Reset Password
+
+const resetPassword = async (req, res) => {
   try {
-    const id = req.params.id.match(/^[0-9a-fA-F]{24}$/);
-    if (id == null) {
-      throw new Error('check your id');
+    const resultValidated = await resetSchema.validateAsync(req.body);
+    const resetdb = await user.findOne({ email: resultValidated.email });
+    if (!resetdb) {
+      return res.status(400).send('Please generate a otp or check the mail');
     }
-    const userdb = await user.findByIdAndRemove(id);
-    if (!userdb) {
-      res.send('User Not Found');
+    // encrypt the password
+    const salt = await bcrypt.genSalt(10);
+    const hashedPassword = await bcrypt.hash(resultValidated.newpassword, salt);
+    // update the password
+    const userupdated = await user.findOneAndUpdate({ email: resultValidated.email }, { password: hashedPassword });
+    if (!userupdated) {
+      throw new Error('User Not Found');
     } else {
-      res.json({
-        userdb,
-      });
+      return res.status(200).json('Password updated successfully');
     }
   } catch (error) {
-    logger.error(error);
+    return res.send(error.message);
   }
 };
 
 // Tutorial and user exports
+
 module.exports = {
   getTutorial,
   getSortedTutorial,
@@ -205,4 +318,6 @@ module.exports = {
   getUsers,
   deleteUsers,
   loginUsers,
+  forgotPassword,
+  resetPassword,
 };
